# UnityKt

./: .gitignore  build.gradle
TextureDecoderNative/: CMakeLists.txt  README.md  build-darwin.sh  build-linux.sh  build-windows.bat  header.bat  header.sh  io_github_deficuet_unitykt_extension_TextureDecoder.cc  io_github_deficuet_unitykt_extension_TextureDecoder.h
TextureDecoderNative/lib/: astc.cpp  bcn.cpp  etc.cpp  resource.h
TextureDecoderNative/lib/fp16/: fp16.h
TextureDecoderNative/lib/unitycrunch/: crn_decomp.h
docs/: ARCHITECTURE.md  BUILD.md  DEPLOYMENT_CHECKLIST.md  DOCUMENTATION_INDEX.md  EXAMPLE_API.md  LINUX_SERVER_GUIDE.md  NATIVE_SETUP.md  PULL_REQUEST_TEMPLATE.md  QUICKSTART.md  SUMMARY.md
src/main/java/io/github/deficuet/unitykt/extension/: TextureDecoder.java
src/main/kotlin/io/github/deficuet/unitykt/internal/: NativeUtils.kt
src/main/kotlin/io/github/deficuet/unitykt/internal/impl/: SpriteAtlasImpl.kt  Texture2DImpl.kt  UnityObjectImpl.kt
src/main/resources/natives/darwin-x86_64/: .gitkeep
src/main/resources/natives/linux-x86_64/: .gitkeep
src/test/kotlin/io/github/deficuet/unitykt/test/: NativeLibraryTest.kt
